--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Remotes: [remote::]github::yrvelez/claudeR
-Imports:
-  openai
-
+Imports: 
+    claudeR (>= 0.0.0.9000),
+    openai
+Remotes:  
+    ytvelez
